--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
-.App {
+#root {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
   height: 100vh;
 }
